# E---CAD-CONVERTER

./: .env.example  .gitignore  DECISIONS.md  Dockerfile  PROJECT_SCOPE.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  container.yml
docs/: architecture.md  ci_cd.md  cloud.md  format_mapping.md  internal_model.md  validation.md
examples/diode_rectifier/: model.json
examples/mosfet_switch/: model.json
examples/opamp_amplifier/: model.json
examples/rc_filter/: model.json
examples/rc_filter_pcb/: model.json
examples/voltage_divider/: model.json
examples/voltage_divider_pcb/: model.json
meeting_notes/: template.md
schemas/: internal_model.schema.json
scripts/: check_examples.py
src/ecad_agent/: __init__.py  cli.py
src/ecad_agent/ai/: __init__.py  context_builder.py  copilot.py  explanation_agent.py  mapping_agent.py  prompts.py  review_agent.py  tools.py
src/ecad_agent/backend/: __init__.py
src/ecad_agent/exporters/: __init__.py  json_exporter.py  kicad_exporter.py  spice_exporter.py
src/ecad_agent/importers/: __init__.py  base.py  eagle_importer.py  easyeda_importer.py  format_detector.py  json_importer.py  kicad_importer.py
src/ecad_agent/model/: net.py  (+7 more)
tests/: test_ai_context.py  test_connectivity.py  test_copilot_core.py  test_exporters.py  test_internal_model.py  test_pcb_layer.py
wrappers/: README.md
wrappers/altium_extension/: README.md
wrappers/eagle_extension/: README.md
wrappers/easyeda_extension/: README.md
wrappers/kicad_extension/: README.md
(+23 files in other folders)
